src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 39 45% 86%; /* #ece1cd */
    --foreground: 82 13% 25%; /* #414737 */

    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;

    --primary: 82 13% 25%; /* #414737 */
    --primary-foreground: 39 45% 86%; /* #ece1cd */

    --secondary: 39 45% 86%; /* #ece1cd */
    --secondary-foreground: 82 13% 25%; /* #414737 */

    --muted: 240 4.8% 95.9%;
    --muted-foreground: 82 13% 51%; /* #879372 */

    --accent: 38 100% 91%; /* #ffedcf */
    --accent-foreground: 82 13% 25%; /* #414737 */
    
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 142.1 76.2% 36.3%;
    --radius: 0.5rem;

    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
  }
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-foreground text-foreground;
    @apply bg-[url("/background.png")];
  }

  .tweet > div.react-tweet-theme{
    max-width: 100%;
    max-height: 100%;
  }

  .tweet > div.react-tweet-theme div {
    @apply font-text text-lg;
  }

  .tweet > div.react-tweet-theme p {
    @apply font-text text-xl;
  }

  .tweet > div.react-tweet-theme > article > div:nth-child(3) div {
    height: 500px;
    max-height: 600px;
  }

  .tweet video {
    object-fit: contain;
    background-color: black;
  }
}

